fixed navbar not filling the screen on small screens

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,9 @@
 /* Full Width of Screen */
 .navbar {
-    width: 100vw;
+    width: 100%;
     position: sticky;
     top: 0;
+    position: fixed;
     z-index: 1000;
 
     background: #0D1B2A;
@@ -12,14 +13,12 @@
 }
 
 .navbar-container {
-    max-width: 95%;
     margin: 0 auto;
     padding: 12px 16px;
 
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    gap: 5px;
+    justify-content: space-between;
 }
 
 .navbar-name {
@@ -39,7 +38,7 @@
 }
 
 .navbar-name-link:hover {
-    background: gray;   
+    background: gray;
 }
 
 .navbar-links {
@@ -50,7 +49,7 @@
 
     display: flex;
     justify-content: space-between;
-    gap: 5px;
+    margin-left: auto;
 }
 
 .navbar-item-link {
@@ -64,5 +63,5 @@
 }
 
 .navbar-item-link:hover {
-    background: gray;   
+    background: gray;
 }
