--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   background: #415a77;
+}
+
+* {
+  box-sizing: border-box;
 }
